# PRISM

./: .gitignore  README.md  denoise_algo.py  pyproject.toml  results.md  server.py
design-system/prism-server/: MASTER.md
design-system/prism-server-frontend/: MASTER.md
docs/: PRISM_zh.md  kbulk.md  noise_analysis.md  paper.md  phase1_checkpoint_spec.md  phase2_kbulk_spec.md  phase3_cli_validation_spec.md  prism_gmm_hotpath_refactor_todo_zh.md  prism_model_hotpath_refactor_todo_zh.md  prism_model_optimization_zh.md  prism_server_decoupling_handoff.md  prism_server_functional_guide.md  prism_server_requirements.md  prism_v1_server_module_summary.md  refactor_plan_zh.md  scPRISM.md  scPRISM_re.md  scPRISM_zh.md  scRNAseq_framework.pptx  server_refactor_plan.md  实习报告.md  群体划分.md
results/: norman_classification_summary.md
scripts/: analyze_gene_batches.py  calc_degs.py  calc_gene_list.py  down_sample_anndata.py  filter_gene_list.py  gene_subset_anndata.py  intersect_h5ad_genes.py  merge_gene_list.py  plot_batch_perturbation_grid.py  plot_global_priors_fixed_s.py  prepare_ebw4.py  run_fit_distributed.sh  sample_anndata.py  subset_anndata_by_gene_list.py  test_em.py  train_baseline.py  train_gears.py  train_gene_jepa.py  train_gene_mae.py  train_static_gene_net.py  verify_rS_estimation.py
scripts/analysis/: calc_degs.py
scripts/data/: _10xgenomics_common.py  prepare_10xgenomics_all.sh  prepare_10xgenomics_anticoagulants.py  prepare_10xgenomics_platforms.py  prepare_10xgenomics_tissues.py  prepare_ebw4.py
scripts/dev/: test_dist.py  test_em.py  test_expr.py
scripts/experiments/: benchmark_gmm_hotpath.py  run_cell_eval.py  train_baseline.py  train_gears.py  train_gene_jepa.py  train_gene_mae.py  train_static_gene_net.py
src/prism/: __init__.py
src/tests/: test_checkpoint.py  test_checkpoint_distribution.py  test_cli_checkpoint_commands.py  test_cli_checkpoint_common.py  test_cli_common.py  test_cli_common_runtime.py  (+24 more)
(+153 files in other folders)
