[project]
name = "prism"
version = "0.1.0"
description = "Single-cell gene-level empirical Bayes modeling toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anndata>=0.12.10",
    "cell-gears>=0.1.2",
    "numba>=0.64.0",
    "numpy>=2.4.3",
    "pytest>=9.0.2",
    "rich>=14.3.3",
    "scanpy>=1.11.5",
    "scipy>=1.17.1",
    "torch>=2.10.0",
    "tqdm>=4.67.1",
    "typer>=0.24.1",
]

[project.scripts]
prism = "prism.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
