[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prism"
version = "0.1.0"
description = "Single-cell gene-level empirical Bayes modeling toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anndata>=0.12.10",
    "cell-gears>=0.1.2",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "numba>=0.64.0",
    "numpy>=2.4.3",
    "pytest>=9.0.2",
    "rich>=14.3.3",
    "scanpy>=1.11.5",
    "scipy>=1.17.1",
    "torch>=2.10.0",
    "tqdm>=4.67.1",
    "typer>=0.24.1",
    "uvicorn>=0.35.0",
]

[project.scripts]
prism = "prism.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["prism*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"prism.server" = [
    "assets/*",
    "frontend/dist/*.html",
    "frontend/dist/assets/*",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
